components/basic/modal/modal.module.css
.close {
    opacity: 0;
    transition: all .5s ease-in-out;
    position: fixed;
    top: -100%;
}
.overlay {
    display: flex;
    background-color: var(--overlay);
    position: fixed;
    top: 0;
    height: 100svh;
    width: 100vw;
    z-index: 100;
    justify-content: center;
    opacity: 1;
    align-items: flex-start;
    top: 0%;
}
.childBoxClose {
    transform: translateY(-300%);
    transition: transform 0.6s ease-in-out;
}
.childBoxOpen {
    transform: translateY(10%);
    transition: transform 0.6s ease-in-out;
}

